--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+      <script src="https://kit.fontawesome.com/36e8c90e6a.js" crossorigin="anonymous"></script>
     <title>Document</title>
-</head>
-<body>
-    <div class="header name"> Brianna Phillips
-        <div class="menu" 
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="portfolio.html"> Portfolio</a> 
-                </li>
-            </ul>
-        </div>
+  </head>
+  <body>
+    <div class="flexbox-container">
+      Brianna Phillips
+      <div class="flexbox-item">
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="portfolio.html"> Portfolio</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <div id="photo">
-        <img src="Brianna Phillips Headshot.JPG" />
+      <img src="Brianna Phillips Headshot.JPG" />
     </div>
-<div class="container">
-    <div class="main">
+    <div>
+      <div class="main">
         <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum."
         </p>
+      </div>
     </div>
-</div>
-</body>
+    <div>
+      <div class="bottom-container">
+        <footer>
+          <h2>
+            <i class="fa-brands fa-facebook"></i>
+            <a href="mailto:BriannaAHA@icloud.com">BriannaAHA@icloud.com</a>
+          </h2>
+        </footer>
+      </div>
+    </div>
+  </body>
 </html>
