--- a/about.html
+++ b/about.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="flexbox-container">
-      About
-      <div class="flexbox-item">
-        <ul>
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="about.html">About</a>
-          </li>
-          <li>
-            <a href="portfolio.html"> Portfolio</a>
-          </li>
-        </ul>
-      </div>
-    </div>
 
-    <div>
-      <div class="flex-box1">
-        <div class="box-img">
-          <img src="Portfolio box1.png" />
-        </div>
-        <div class="box-text">
-          <div>
-            <h1>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum."
-            </h1>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="flexbox-container">
+    About
+    <div class="flexbox-item">
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li>
+          <a href="portfolio.html"> Portfolio</a>
+        </li>
+        <li>
+          <a href="contact.html"> Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div>
+    <div class="flex-box1">
+      <div class="box-img">
+        <img src="Portfolio box1.png" />
+      </div>
+      <div class="box-text">
+        <div>
+          <h1>
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+            sunt in culpa qui officia deserunt mollit anim id est laborum."
+          </h1>
         </div>
       </div>
     </div>
+  </div>
+  <div>
     <div>
-      <div>
-        <footer>
-          <h2>
-            <a href="mailto:BriannaAHA@icloud.com">BriannaAHA@icloud.com</a>
-          </h2>
-        </footer>
-      </div>
+      <footer>
+        <h2>
+          <a href="mailto:BriannaAHA@icloud.com">BriannaAHA@icloud.com</a>
+        </h2>
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
